--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
-{
-  "token": "YOUR_BOT_TOKEN",
-  "clientId": "YOUR_CLIENT_ID",
-  "guildId": "YOUR_GUILD_ID",
-  "prefix": "!"  
-}
+token = YOUR_BOT_TOKEN
+prefix = ! 
+
+clientId = YOUR_CLIENT_ID
+guildId = YOUR_GUILD_ID
+clientSecret = YOUR_CLIENT_SECRET
+ownerID = YOUR_DISCORD_ID
+
+PORT = 3000
+DOMAIN = YOUR_DASHBOARD_WEBSITE
+CALLBACK_URL = YOUR_DASHBOARD_WEBSITE/api/callback/discord
+HTTPS = true
