--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "YOUR_BOT_TOKEN",
-  "clientId": "YOUR_CLIENT_ID",
-  "guildId": "YOUR_GUILD_ID",
-  "prefix": "!"  
+  "token": process.env.TOKEN,
+  "clientId": process.env.CLIENT_ID,
+  "guildId": process.env.GUILD_ID,
+  "prefix": process.env.PREFIX
 }
