--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "token": process.env.TOKEN,
-  "clientId": process.env.CLIENT_ID,
-  "guildId": process.env.GUILD_ID,
+  "clientId": process.env.clientId,
+  "guildId": process.env.guildId,
   "prefix": process.env.PREFIX
 }
